--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^2.2.1",
+        "react-redux": "^9.1.0",
+        "redux": "^5.0.1"
     }
 }
