--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.1",
+        "laravel-echo": "^1.16.0",
         "react-redux": "^9.1.0",
-        "redux": "^5.0.1"
+        "redux": "^5.0.1",
+        "socket.io-client": "^4.7.4"
     }
 }
