--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
+        "react/promise": "^2.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
