--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "-": "^0.0.1",
         "@reduxjs/toolkit": "^2.2.1",
+        "ioredis": "^5.3.2",
         "laravel-echo": "^1.16.0",
+        "pusher-js": "^8.4.0-rc2",
         "react-redux": "^9.1.0",
         "redux": "^5.0.1",
+        "save": "^2.9.0",
         "socket.io-client": "^4.7.4"
     }
 }
