--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
         "react/promise": "^2.3",
+        "spatie/laravel-permission": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
