--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
+        "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
@@ -20,6 +21,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "jkocik/laravel-profiler": "^2.0",
         "laravel/breeze": "^1.19",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
