--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,22 @@
     "require": {
         "php": "^8.0.2",
         "beyondcode/laravel-websockets": "^1.14",
+        "calcinai/php-imagick": "^0.1.2",
         "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
+        "intervention/image": "^3.4",
         "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
         "react/promise": "^2.3",
+        "spatie/image": "^3.3",
+        "spatie/laravel-image-optimizer": "^1.8",
         "spatie/laravel-permission": "^6.3",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+        "twbs/bootstrap": "^5.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
