--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "-": "^0.0.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@reduxjs/toolkit": "^2.2.1",
+        "bootstrap": "^3.4.1",
         "ioredis": "^5.3.2",
         "laravel-echo": "^1.16.0",
         "pusher-js": "^8.4.0-rc2",
