--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
+        "predis/predis": "^2.2",
         "pusher/pusher-php-server": "^7.2",
         "react/promise": "^2.3",
         "spatie/image": "^3.3",
